fixed alignment of admin console reports and my account

--- a/public/assets/dashboard/css/dk-style.css
+++ b/public/assets/dashboard/css/dk-style.css
@@ -1805,9 +1805,15 @@ span.menu-active {
     border: 0;
 }
 
+.forgot_pass input {
+    border: 1px solid #90A0B76E;
+    padding: 24px;
+    border-radius: 4px;
+}
+
 .otp-verify-btn {
     font-family: Poppins;
-    font-size: 12px;
+    font-size: 17px;
     font-style: normal;
     font-weight: 500;
     letter-spacing: 0em;
@@ -1817,7 +1823,7 @@ span.menu-active {
     color: var(--white);
     width: 100%;
     margin: 0px !important;
-    padding: 10px 20px !important;
+    padding: 12px 20px !important;
     border: none;
 }
 
@@ -7305,7 +7311,7 @@ td {
     background-color: #fff;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
     max-width: 100%;
-    margin: 50px auto;
+    margin: 0px auto 50px auto;
     padding: 25px;
     border-radius: 10px;
 }
